# sparse-encoder

./: .pre-commit-config.yaml  main.py  pyproject.toml
config/: ettin-xs.yaml
src/sparse_encoder/: __init__.py  config.py  data.py  model.py  train.py
src/sparse_encoder/scripts/: make_distillation_dataset.py
