[project]
name = "sparse-encoder"
version = "0.1.0"
description = "Sparse encoder training script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "ipython>=9.5.0",
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
]

[project.scripts]
train = "main:main"
dataset = "sparse_encoder.scripts.make_distillation_dataset:main"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

